--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
     master:
-        image: greenbirdit/locust:0.9.0
+        image: timran1/locust-fixed-interval:latest
         environment:
             - "LOCUST_MODE=master"
             - "TARGET_HOST=http://site.example.com"
@@ -13,7 +13,7 @@ services:
         ports:
             - "8089:8089"
     worker:
-        image: greenbirdit/locust:0.9.0
+        image: timran1/locust-fixed-interval:latest
         environment:
             - "LOCUST_MODE=worker"
             - "LOCUST_MASTER=master"
