--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ pyzmq==17.1.2
 statsd==3.3.0
 geventhttpclient==1.3.1
 locust-fixed-interval==0.1
-git+git://github.com/timran1/locust.git@master#egg=locustio
+git+git://github.com/timran1/locust.git@webui-updates#egg=locustio
 
