--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@
 pyzmq==17.1.2
 statsd==3.3.0
 geventhttpclient==1.3.1
-locust-fixed-interval==0.1
+# locust-fixed-interval==0.1
 git+git://github.com/timran1/locust.git@webui-updates#egg=locustio
-
+docutils==0.16
+boto3==1.7.73
+plumb==1.2.5
+redis==2.10.6
