--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
 # locustio==0.14.6
-pyzmq==17.1.2
-statsd==3.3.0
-geventhttpclient==1.3.1
-git+git://github.com/timran1/locust.git@master#egg=locustio
-docutils==0.16
+git+git://github.com/timran1/locust.git@master#egg=locust
 boto3==1.7.73
 redis==2.10.6
 pykafka==2.8.0
